--- a/interface-builder-task/Base.lproj/Main.storyboard
+++ b/interface-builder-task/Base.lproj/Main.storyboard
@@ -12,28 +12,125 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="interface_builder_task" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="N0h-Ij-Ptz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZdG-bY-a0D">
-                                <rect key="frame" x="186" y="288" width="52" height="57"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m2k-hj-dEG">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="6bS-eo-mQX">
+                                        <rect key="frame" x="0.0" y="725" width="414" height="117"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XT-uk-TuO">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
+                                                <color key="backgroundColor" red="0.19215686269999999" green="0.40784313729999999" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="51" id="LWZ-aZ-ikN"/>
+                                                </constraints>
+                                                <state key="normal" title="Войти">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6pp-XV-zFR">
+                                                <rect key="frame" x="0.0" y="66" width="414" height="51"/>
+                                                <color key="backgroundColor" red="0.19215686274509802" green="0.40784313725490196" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="51" id="ys7-Bj-4BD"/>
+                                                </constraints>
+                                                <state key="normal" title="Зарегестрироваться">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="su8-L9-76P">
+                                        <rect key="frame" x="16" y="81.000000000000014" width="382" height="250.33333333333337"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Авторизация" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZjN-25-kOK">
+                                                <rect key="frame" x="0.0" y="0.0" width="382" height="43"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Авторизуйтесь, чтобы получить доступ к полному функционалу приложения" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAf-Ai-WmH">
+                                                <rect key="frame" x="0.0" y="66" width="382" height="38.333333333333343"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BCx-d5-te2">
+                                                <rect key="frame" x="0.0" y="127.33333333333334" width="382" height="50"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Login" textAlignment="natural" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="SWG-c1-FaD">
+                                                        <rect key="frame" x="10" y="0.0" width="372" height="50"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="0YC-9U-waP"/>
+                                                    <constraint firstItem="SWG-c1-FaD" firstAttribute="top" secondItem="BCx-d5-te2" secondAttribute="top" id="0nc-lh-16R"/>
+                                                    <constraint firstAttribute="bottom" secondItem="SWG-c1-FaD" secondAttribute="bottom" id="Re5-SU-BMd"/>
+                                                    <constraint firstAttribute="trailing" secondItem="SWG-c1-FaD" secondAttribute="trailing" id="jLV-N1-y7o"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="mQK-Ld-eij"/>
+                                                    <constraint firstItem="SWG-c1-FaD" firstAttribute="leading" secondItem="BCx-d5-te2" secondAttribute="leading" constant="10" id="zwN-BR-Wv9"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ImA-dT-f7H">
+                                                <rect key="frame" x="0.0" y="200.33333333333331" width="382" height="50"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="y7e-fH-NtD">
+                                                        <rect key="frame" x="10" y="0.0" width="372" height="50"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.76862745099999996" green="0.76862745099999996" blue="0.76862745099999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstItem="y7e-fH-NtD" firstAttribute="leading" secondItem="ImA-dT-f7H" secondAttribute="leading" constant="10" id="2Fq-yT-CLM"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="T4U-bV-vsW"/>
+                                                    <constraint firstAttribute="bottom" secondItem="y7e-fH-NtD" secondAttribute="bottom" id="TrF-5n-Te0"/>
+                                                    <constraint firstAttribute="height" constant="50" id="Yj9-jh-TTa"/>
+                                                    <constraint firstAttribute="trailing" secondItem="y7e-fH-NtD" secondAttribute="trailing" id="lsf-Wk-4oh"/>
+                                                    <constraint firstItem="y7e-fH-NtD" firstAttribute="top" secondItem="ImA-dT-f7H" secondAttribute="top" id="wvw-sg-D4l"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="su8-L9-76P" secondAttribute="trailing" constant="16" id="QFX-Za-3AF"/>
+                                    <constraint firstAttribute="trailing" secondItem="6bS-eo-mQX" secondAttribute="trailing" id="RNy-R8-ZsO"/>
+                                    <constraint firstItem="su8-L9-76P" firstAttribute="centerX" secondItem="m2k-hj-dEG" secondAttribute="centerX" id="nPz-6t-gus"/>
+                                    <constraint firstItem="6bS-eo-mQX" firstAttribute="leading" secondItem="m2k-hj-dEG" secondAttribute="leading" id="tCW-AW-lrE"/>
+                                    <constraint firstItem="su8-L9-76P" firstAttribute="leading" secondItem="m2k-hj-dEG" secondAttribute="leading" constant="16" id="uDU-1U-z3f"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="s0V-Ij-niU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="m2k-hj-dEG" firstAttribute="leading" secondItem="N0h-Ij-Ptz" secondAttribute="leading" id="348-W7-7r8"/>
+                            <constraint firstItem="su8-L9-76P" firstAttribute="top" secondItem="s0V-Ij-niU" secondAttribute="top" constant="37" id="JsE-vJ-EMR"/>
+                            <constraint firstAttribute="trailing" secondItem="m2k-hj-dEG" secondAttribute="trailing" id="Rjh-MG-DFG"/>
+                            <constraint firstAttribute="bottom" secondItem="m2k-hj-dEG" secondAttribute="bottom" id="Szm-ah-12a"/>
+                            <constraint firstItem="m2k-hj-dEG" firstAttribute="top" secondItem="N0h-Ij-Ptz" secondAttribute="top" id="dSk-0n-A6T"/>
+                            <constraint firstItem="s0V-Ij-niU" firstAttribute="bottom" secondItem="6bS-eo-mQX" secondAttribute="bottom" constant="20" id="rtS-CK-tOm"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="titleLabel" destination="ZdG-bY-a0D" id="egc-Js-Wt8"/>
+                        <outlet property="loginFieldBackgroundView" destination="BCx-d5-te2" id="zZH-T4-uPo"/>
+                        <outlet property="passwordFieldBackgroundView" destination="ImA-dT-f7H" id="B2b-me-ksm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="73.913043478260875" y="75.669642857142847"/>
+            <point key="canvasLocation" x="73.125" y="75"/>
         </scene>
     </scenes>
     <resources>
