--- a/interface-builder-task/Base.lproj/Main.storyboard
+++ b/interface-builder-task/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="su8-L9-76P">
-                                        <rect key="frame" x="16" y="81.000000000000014" width="382" height="250.33333333333337"/>
+                                        <rect key="frame" x="16" y="81.000000000000014" width="382" height="212.33333333333337"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Авторизация" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZjN-25-kOK">
                                                 <rect key="frame" x="0.0" y="0.0" width="382" height="43"/>
@@ -59,46 +59,34 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BCx-d5-te2">
-                                                <rect key="frame" x="0.0" y="127.33333333333334" width="382" height="50"/>
-                                                <subviews>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Login" textAlignment="natural" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="SWG-c1-FaD">
-                                                        <rect key="frame" x="10" y="0.0" width="372" height="50"/>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
-                                                    </textField>
-                                                </subviews>
-                                                <color key="backgroundColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="0YC-9U-waP"/>
-                                                    <constraint firstItem="SWG-c1-FaD" firstAttribute="top" secondItem="BCx-d5-te2" secondAttribute="top" id="0nc-lh-16R"/>
-                                                    <constraint firstAttribute="bottom" secondItem="SWG-c1-FaD" secondAttribute="bottom" id="Re5-SU-BMd"/>
-                                                    <constraint firstAttribute="trailing" secondItem="SWG-c1-FaD" secondAttribute="trailing" id="jLV-N1-y7o"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="mQK-Ld-eij"/>
-                                                    <constraint firstItem="SWG-c1-FaD" firstAttribute="leading" secondItem="BCx-d5-te2" secondAttribute="leading" constant="10" id="zwN-BR-Wv9"/>
-                                                </constraints>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ImA-dT-f7H">
-                                                <rect key="frame" x="0.0" y="200.33333333333331" width="382" height="50"/>
-                                                <subviews>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="y7e-fH-NtD">
-                                                        <rect key="frame" x="10" y="0.0" width="372" height="50"/>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
-                                                    </textField>
-                                                </subviews>
-                                                <color key="backgroundColor" red="0.76862745099999996" green="0.76862745099999996" blue="0.76862745099999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <constraints>
-                                                    <constraint firstItem="y7e-fH-NtD" firstAttribute="leading" secondItem="ImA-dT-f7H" secondAttribute="leading" constant="10" id="2Fq-yT-CLM"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="T4U-bV-vsW"/>
-                                                    <constraint firstAttribute="bottom" secondItem="y7e-fH-NtD" secondAttribute="bottom" id="TrF-5n-Te0"/>
-                                                    <constraint firstAttribute="height" constant="50" id="Yj9-jh-TTa"/>
-                                                    <constraint firstAttribute="trailing" secondItem="y7e-fH-NtD" secondAttribute="trailing" id="lsf-Wk-4oh"/>
-                                                    <constraint firstItem="y7e-fH-NtD" firstAttribute="top" secondItem="ImA-dT-f7H" secondAttribute="top" id="wvw-sg-D4l"/>
-                                                </constraints>
-                                            </view>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Login" textAlignment="natural" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="SWG-c1-FaD" customClass="CustomTextField" customModule="interface_builder_task" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="127.33333333333334" width="382" height="31"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                        <real key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="8"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="y7e-fH-NtD" customClass="CustomTextField" customModule="interface_builder_task" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="181.33333333333331" width="382" height="31"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                        <real key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="9"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </textField>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -123,16 +111,20 @@
                             <constraint firstItem="s0V-Ij-niU" firstAttribute="bottom" secondItem="6bS-eo-mQX" secondAttribute="bottom" constant="20" id="rtS-CK-tOm"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="loginFieldBackgroundView" destination="BCx-d5-te2" id="zZH-T4-uPo"/>
-                        <outlet property="passwordFieldBackgroundView" destination="ImA-dT-f7H" id="B2b-me-ksm"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="73.125" y="75"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="SWG-c1-FaD">
+            <size key="intrinsicContentSize" width="54.666666666666664" height="31"/>
+        </designable>
+        <designable name="y7e-fH-NtD">
+            <size key="intrinsicContentSize" width="85" height="31"/>
+        </designable>
+    </designables>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
