--- a/interface-builder-task/Base.lproj/Main.storyboard
+++ b/interface-builder-task/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="6bS-eo-mQX">
                                         <rect key="frame" x="0.0" y="725" width="414" height="117"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XT-uk-TuO">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XT-uk-TuO" customClass="CustomButtom" customModule="interface_builder_task" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
                                                 <color key="backgroundColor" red="0.19215686269999999" green="0.40784313729999999" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
@@ -32,7 +32,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6pp-XV-zFR">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6pp-XV-zFR" customClass="CustomButtom" customModule="interface_builder_task" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="66" width="414" height="51"/>
                                                 <color key="backgroundColor" red="0.19215686274509802" green="0.40784313725490196" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
@@ -45,7 +45,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="su8-L9-76P">
-                                        <rect key="frame" x="16" y="81.000000000000014" width="382" height="212.33333333333337"/>
+                                        <rect key="frame" x="16" y="81.000000000000014" width="382" height="232.33333333333337"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Авторизация" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZjN-25-kOK">
                                                 <rect key="frame" x="0.0" y="0.0" width="382" height="43"/>
@@ -60,7 +60,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Login" textAlignment="natural" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="SWG-c1-FaD" customClass="CustomTextField" customModule="interface_builder_task" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="127.33333333333334" width="382" height="31"/>
+                                                <rect key="frame" x="0.0" y="127.33333333333334" width="382" height="41"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -74,7 +74,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="y7e-fH-NtD" customClass="CustomTextField" customModule="interface_builder_task" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="181.33333333333331" width="382" height="31"/>
+                                                <rect key="frame" x="0.0" y="191.33333333333331" width="382" height="41"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -111,18 +111,28 @@
                             <constraint firstItem="s0V-Ij-niU" firstAttribute="bottom" secondItem="6bS-eo-mQX" secondAttribute="bottom" constant="20" id="rtS-CK-tOm"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loginTextField" destination="SWG-c1-FaD" id="2X1-yn-2vO"/>
+                        <outlet property="passTextField" destination="y7e-fH-NtD" id="9ar-6D-N8H"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="73.125" y="75"/>
+            <point key="canvasLocation" x="72.463768115942031" y="75"/>
         </scene>
     </scenes>
     <designables>
+        <designable name="6XT-uk-TuO">
+            <size key="intrinsicContentSize" width="44" height="30"/>
+        </designable>
+        <designable name="6pp-XV-zFR">
+            <size key="intrinsicContentSize" width="148" height="30"/>
+        </designable>
         <designable name="SWG-c1-FaD">
-            <size key="intrinsicContentSize" width="54.666666666666664" height="31"/>
+            <size key="intrinsicContentSize" width="56.666666666666664" height="41"/>
         </designable>
         <designable name="y7e-fH-NtD">
-            <size key="intrinsicContentSize" width="85" height="31"/>
+            <size key="intrinsicContentSize" width="87" height="41"/>
         </designable>
     </designables>
     <resources>
