--- a/interface-builder-task/Base.lproj/Main.storyboard
+++ b/interface-builder-task/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nHP-gZ-cwc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="net-wg-Ntq">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -128,7 +128,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5mY-sO-Tpw">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5mY-sO-Tpw">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tnc-nn-FCp" userLabel="Content View">
@@ -249,6 +249,7 @@
                         <outlet property="emailRegisterTextField" destination="9CD-LL-D8e" id="qgC-l2-p4s"/>
                         <outlet property="loginRegisterTextField" destination="EZe-BN-dJX" id="MP4-UW-pJK"/>
                         <outlet property="passwordRegisterTextField" destination="S8k-Tk-2st" id="Okw-yu-EVQ"/>
+                        <outlet property="registrationLabel" destination="HhJ-7r-f1Y" id="PwE-9w-pvd"/>
                         <outlet property="scrollView" destination="5mY-sO-Tpw" id="VfA-Pa-0LN"/>
                         <outlet property="stackView" destination="RvO-1n-gvz" id="iua-gD-yQ2"/>
                     </connections>
@@ -265,7 +266,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZWK-EJ-PmF">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZWK-EJ-PmF">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e9f-6b-F3V" userLabel="Content View">
@@ -379,6 +380,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="authLabel" destination="lI4-t6-nVj" id="whv-9R-JHa"/>
                         <outlet property="loginAuthTextField" destination="2g1-kC-wLJ" id="4TJ-a5-ctQ"/>
                         <outlet property="passwordAuthTextField" destination="vL1-9w-JTJ" id="hzG-j5-ww8"/>
                         <outlet property="scrollView" destination="ZWK-EJ-PmF" id="DND-2J-mpj"/>
