--- a/interface-builder-task/Base.lproj/Main.storyboard
+++ b/interface-builder-task/Base.lproj/Main.storyboard
@@ -258,6 +258,37 @@
             </objects>
             <point key="canvasLocation" x="2471" y="75"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="Rw4-yz-xKu">
+            <objects>
+                <viewController id="8lj-se-NP7" customClass="TableViewController" customModule="interface_builder_task" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="blw-Gs-vZt">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Kop-5x-pIO">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="separatorColor" systemColor="systemTealColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="11R-cv-srH"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Kop-5x-pIO" firstAttribute="leading" secondItem="11R-cv-srH" secondAttribute="leading" id="0nz-z4-ti0"/>
+                            <constraint firstItem="11R-cv-srH" firstAttribute="bottom" secondItem="Kop-5x-pIO" secondAttribute="bottom" id="LKo-3u-hUl"/>
+                            <constraint firstItem="11R-cv-srH" firstAttribute="trailing" secondItem="Kop-5x-pIO" secondAttribute="trailing" id="MWd-Ea-n6J"/>
+                            <constraint firstItem="Kop-5x-pIO" firstAttribute="top" secondItem="11R-cv-srH" secondAttribute="top" id="rd0-18-clB"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Kop-5x-pIO" id="aHr-3o-KyH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3IO-EN-hIO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="993" y="75"/>
+        </scene>
         <!--Login View Controller-->
         <scene sceneID="4Y3-oG-ZRd">
             <objects>
@@ -433,6 +464,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
